[metadata]
name = amqp-rpc-server
version = 1.0.0
author = Jan Eike Suchard
author_email = jan-eike.suchard@magenta.de
description = A RPC server based on AMQPv0-9-1-enabled message broker
long_description = file: README.pypi.md
long_description_content_type = text/markdown
url = https://github.com/j-suchard/amqp-rpc-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
