[metadata]
name = amqp-rpc-server
version = 1.2.2
author = Jan Eike Suchard
author_email = jan-eike.suchard@magenta.de
description = A RPC server based on AMQPv0-9-1-enabled message broker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-suchard/amqp-rpc-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = amqp_rpc_server
python_requires = >=3.6
install_requires =
    pika~=1.2.0
